@@ -88,6 +88,7 @@ DEFINE_ENUM(EMasterReign,
     ((FixRootAccountLimits)                                         (1302))  // aleksandra-zh
     ((SwitchToAlterTableReplica)                                    (1303))  // babenko
     ((DynamicTimestampProviderDiscovery)                            (1304))  // aleksandra-zh
+    ((YT_12365_FixCalculatingStaticMemoryInMounting)                (1305))  // lexolordan
 );
 
 ////////////////////////////////////////////////////////////////////////////////
